[package]
name = "tardis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sgp4 = { path = "sgp4", version = "0.1.0", optional = false }
rust-spice = { git = "https://github.com/cazou/rust-spice.git", branch = "include-c-lib", optional = false }

[[example]]
name = "tle"
path = "examples/tle.rs"
