[package]
name = "tardis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sgp4 = { path = "sgp4", version = "0.1.0", optional = false }
simple-error = "0.2"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]
optional = true

[dependencies.bevy]
version = "0.7"
optional = true

[dependencies.bevy_easings]
git = "https://github.com/vleue/bevy_easings"
branch = "dependabot/cargo/bevy-0.7"
optional = true

[dependencies.smooth-bevy-cameras]
git = "https://github.com/dtaralla/smooth-bevy-cameras"
branch = "allow_pausing_interpolation"
optional = true

[dependencies.viewport-orientation-gizmo]
git = "https://github.com/dtaralla/viewport-orientation-gizmo"
branch = "RELEASE/0.3"
features = ["click-reaction"]
optional = true

[features]
viewer = ["bevy", "bevy_easings", "smooth-bevy-cameras", "viewport-orientation-gizmo", "reqwest"]

[[example]]
name = "tle"
path = "examples/tle.rs"

[[example]]
name = "with_bevy_viewer"
required-features = ["viewer"]
